v3.4.1:
  - Added displayname-equals-regex for custom items
  - Added configurable worlds for illegal-stacks
  - Fixed lore-contains-regex metadata for custom item
--------------------------------------------
v3.4:
  - Added mending action (MC>=1.13): when a player has an item repaired via the mending enchantment;
  - Added an illegal stacks item scanner: you can set custom max stacks amount for items and choose what to do if the player has an illegal stacked item into its inventory;
  - Added complete item attributes matches for custom items (big thanks to Epicanard) (MC>=1.8):
    - Example custom item:
	  mysword:
	    material: diamond_sword
	    attribute: GENERIC_ATTACK_DAMAGE:>2.3
  - Disabled particles by defaut in the config;
  - Fixed hoppers-block for transfer action;
  - Fixed offhand for entityinteract;
  - [Dev] Created, hosting and fixed maven repository for all dependencies;
--------------------------------------------
v3.3.3:
  - Added reverted custom items:
    - Using the reverted keyword, the plugin will revert the ban of a custom item (all items will be banned except the custom item);
  - Updated plugin for 1.18 and more:
    - full recode of the versioning system which allows the plugin to work on several updates;
--------------------------------------------
v3.3.2: (hotfix)
  - Fixed smith action error;
--------------------------------------------
v3.3.1: (hotfix)
  - Fixed inventory error;
  - Fixed enchantments ban data;
--------------------------------------------
v3.3:
  - Added smith action: when the recipe of an item is completed inside a smithing table (MC>=1.16);
  - Added custom permission per item/action:
    - This is an important notable improvement for the permission system.
    - Please check the documentation for more info.
  - Fixed craft action:
    - was displaying banned message even if the item does not match;
	- now displays the crafted item but block it;
  - Removed "addeverywhere" from tab completition;